--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
     "storage": "^0.2.0",
