--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
     "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
     "firestore": "^1.1.6",
